# vibe-code-guardian-zed

./: .gitignore  Cargo.toml  README.md  extension.toml
src/: lib.rs
