[package]
name = "vibe-code-guardian"
version = "0.5.0"
edition = "2021"
description = "Game-like checkpoint system for AI-assisted coding - save, load, and rollback your vibe coding sessions"
license = "MIT"
repository = "https://github.com/aresnasa/vibe-code-guardian"
homepage = "https://github.com/aresnasa/vibe-code-guardian"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
